plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'jacoco'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':common')
    implementation project(':ecosystem')
    implementation project(':lifeforms')

    implementation libs.guava
    implementation 'org.springframework.boot:spring-boot-starter'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.mockito:mockito-core:3.+"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    //cleaning up the JiBx classes to jacoco will not cause problems for CareDiscovery
    doFirst {
        delete fileTree(dir: "${buildTreePath}/classes", include: "**/JiBX_*.class")
    }
    dependsOn test // tests are required to run before generating the report
}

jacoco {
    toolVersion = "0.8.11"
    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
